@startuml
scale 0.6
package unibo.exiled{

  package view {
    class GameView {
        + draw(): void
        + etc...()
    }
    
    class EndGameView {
        + display(): void
    }
  }
  
  package controller{
    class GameController {
        + isOver(): boolean
        + isWon(): boolean
        + etc...()
    }
  }
  
  package utilities{
    enum EndState {
        VICTORY
        GAME_OVER
    }
  }
}

GameView -|> EndGameView

GameController o-- EndState

GameController -- GameView

EndGameView . EndState

@enduml
